- Fix: Change of numbering module was not effective.
- Fix: Change error management when adding already used supplier ref
       for a product.
- Fix: Running sending-email.php
- Fix: Warning should not appears for invoice closed
- Fix: Import for companies works even with prefix empty.

For developers:
- Qual: Reorganize /dev directory.
- Qual: Change the way items are linked together.
- New: Modules can add their own tab on projects cards.
- Qual: The login page now use a template in /core/template/login.tpl.php.


***** ChangeLog for 2.7.1 compared to 2.7 *****

For users:
- Fix: Bad decimal management for it_IT and fr_BE languages.
- Fix: A third party created from a member is created as a 
       customer.
- Fix: Change of numbering module was not effective.
- Fix: Report of balance missing supplier invoices.
- Fix: Running sendmaing-email.php script.
- Fix: Detection of country for IBAN management.
- Fix: Update member photo.


***** ChangeLog for 2.7 compared to 2.6 *****

For users:
- New: Add a print icon to show a page to print without menus.
- New: Can add a free text on bank cheque receipts.
- New: Price level can be defined also for prospects.
- New: Add a help and support center.
- New: Can export commercial proposals.
- New: Can use a cache for xcal exports.
- New: Option for faster confirmation process with one ajax popup.
- New: Complete theme bluelagoon and rodolphe
- New: Can select third parties emails in emailing module for all
       third parties with expired contract's lines.
- New: Can add a field errors-to in emailing.
- New: Can use inline images in emails.
- New: Add predefined invoices (can be use for repeated invoices).
- New: Add a confirmation when cloning products.
- New: Add stock in product lists.
- New: Can filter list of stock movement on date or product.
- New: Added a link from product list to their stock movements.
- New: Several speed enhancements after using the Google Page speed 
  plugin for FireBug.