@@ -1,6 +1,6 @@
 <?php
 /* Copyright (C) 2002-2007 Rodolphe Quiedeville <rodolphe@quiedeville.org>
- * Copyright (C) 2004-2009 Laurent Destailleur  <eldy@users.sourceforge.net>
+ * Copyright (C) 2004-2010 Laurent Destailleur  <eldy@users.sourceforge.net>
  * Copyright (C) 2005-2009 Regis Houssin        <regis@dolibarr.fr>
  *
  * This program is free software; you can redistribute it and/or modify
@@ -236,11 +236,7 @@ if ($_POST['action'] == 'setdescription')
 	if ($result < 0) dol_print_error($db,$fichinter->error);
 }
 
-
-
-/*
- *  Ajout d'une ligne d'intervention
- */
+// Add line
 if ($_POST['action'] == "addligne" && $user->rights->ficheinter->creer)
 {
 	if ($_POST['np_desc'] && ($_POST['durationhour'] || $_POST['durationmin']))
