@@ -29,9 +29,10 @@ AutoActions = Automatic filling of agenda
 AgendaAutoActionDesc = Define here events for which you want Dolibarr to create automatically an action in agenda. If nothing is checked (by default), only manual actions will be included in agenda.
 AgendaSetupOtherDesc = This page allows to configure other parameters of agenda module.
 ActionsEvents = Events for which Dolibarr will create an action in agenda automatically
-PropalValidatedInDolibarr = Proposal validated
-InvoiceValidatedInDolibarr = Invoice validated
-OrderValidatedInDolibarr = Order validated
+PropalValidatedInDolibarr = Proposal %s validated
+InvoiceValidatedInDolibarr = Invoice %s validated
+OrderValidatedInDolibarr = Order %s validated
+InterventionValidatedInDolibarr=Intervention %s validated
 NewCompanyToDolibarr = Third party created
 DateActionPlannedStart = Planned start date
 DateActionPlannedEnd = Planned end date
