@@ -29,9 +29,10 @@ AutoActions=Alimentation automatique de l'agenda
 AgendaAutoActionDesc=Définissez dans cet onglet les évènements pour lesquels dolibarr créera automatiquement une action dans l'agenda. Si aucune case n'est cochée (par défaut), seules les actions manuelles seront incluses dans l'agenda.
 AgendaSetupOtherDesc=Cette page permet de configurer les autres paramètres du module agenda.
 ActionsEvents=Evènements pour lesquels Dolibarr doit créer une action dans l'agenda en automatique.
-PropalValidatedInDolibarr=Proposition validée
-InvoiceValidatedInDolibarr=Facture validée
-OrderValidatedInDolibarr=Commande validée
+PropalValidatedInDolibarr=Proposition %s validée
+InvoiceValidatedInDolibarr=Facture %s validée
+OrderValidatedInDolibarr=Commande %s validée
+InterventionValidatedInDolibarr=Intervention %s validée
 NewCompanyToDolibarr=Tiers créé
 DateActionPlannedStart=Date début réalisation prévue
 DateActionPlannedEnd=Date fin réalisation prévue
