@@ -42,8 +42,9 @@ For users:
 For developers:
 - Qual: Reorganize /dev directory.
 - Qual: Change the way items are linked together.
-- New: Modules can add their own tab on projects cards.
 - Qual: The login page now use a template in /core/template/login.tpl.php.
+- New: Modules can add their own tab on projects cards.
+- New: Add management of triger FICHEINTER_VALIDATE
 
 
 ***** ChangeLog for 2.7.1 compared to 2.7 *****
